# llm-agent-service

./: README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/core/: __init__.py  logger.py  probes.py  settings.py
app/routers/: agent.py  probes.py
app/services/: __init__.py
app/services/jtai/: __init__.py  chat_context.py  jtai.py  models.py  tool_context.py  types.py
app/services/jtai/agent/: base.py
app/services/nacos/: __init__.py  manager.py
app/services/tools/: __init__.py  websearch.py
data/: config.yaml
nacos-data/data/: llm-agent-service.yaml+DEFAULT_GROUP+
nacos-data/snapshot/: llm-test.yaml+DEFAULT_GROUP+  llm-test.yaml+DEFAULT_GROUP+public
