[project]
name = "llm-inference-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "nacos-sdk-python>=2.0.6",
    "openai>=1.78.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "shortuuid>=1.0.13",
    "uvicorn>=0.34.2",
]
